--- a/data/blog/ announcing-lts-grant-program-to-support-bitcoin-core-contributors.mdx
+++ b/data/blog/ announcing-lts-grant-program-to-support-bitcoin-core-contributors.mdx
@@ -1,58 +1,67 @@
 ---
-title: "Announcing OpenSats LTS Grants"
-date: '2023-05-21'
+title: "Long-Term Support Program for Bitcoin Core Developers"
+date: '2023-06-12'
 tags: ['OpenSats', 'grants', 'bitcoin']
 draft: false
 authors: ['dergigi']
 summary: "OpenSats is launching long-term grants to support Bitcoin Core contributors and similar load-bearing internet people"
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quam magna,
-congue et blandit a, accumsan a nunc. Nulla sit amet turpis mauris. Donec et
-risus non tortor posuere malesuada at a odio. Nunc ac auctor nibh. Etiam ac
-finibus enim. Aliquam mollis velit diam, sed gravida urna placerat id. Maecenas
-quis erat laoreet, luctus nibh vel, dignissim ex. Suspendisse augue dolor,
-fringilla nec elit a, condimentum ultrices turpis. Donec id arcu sed diam
-finibus maximus a in nisl. Morbi venenatis dolor a lacus posuere pharetra. Proin
-tellus quam, hendrerit vitae lorem eget, sollicitudin malesuada nisi. Quisque
-scelerisque enim et eros molestie, a euismod urna aliquet.
+OpenSats is pleased to announce a new long-term support (LTS) program for
+Bitcoin Core developers and similar Load-Bearing Internet People.[^fn-lbip] This grant
+program is designed to provide financial support for developers who are working
+on critical infrastructure for the bitcoin network.
 
-Donec a convallis lectus. Cras in erat non odio tristique bibendum et ac lacus.
-Morbi venenatis, augue in pharetra posuere, erat urna venenatis tortor, a
-vulputate sapien risus id lorem. Pellentesque ac commodo enim. Mauris enim nibh,
-volutpat id lobortis sit amet, lacinia quis metus. Quisque feugiat orci a nulla
-bibendum, at laoreet turpis dapibus. Pellentesque pulvinar non mi et sagittis.
-Sed dictum dapibus tortor, ut elementum leo. Donec sagittis aliquet tristique.
-Donec justo metus, condimentum vel metus aliquet, placerat vehicula ante. Sed
-posuere, nunc non vulputate auctor, dolor tellus condimentum mauris, non ornare
-eros nibh placerat lacus. Proin lacinia ac ex vitae feugiat. Orci varius natoque
-penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam
-euismod lacus dolor, at imperdiet turpis condimentum non. Proin ac dignissim
-lectus.
+The LTS program is a new initiative from OpenSats and is distinct from our
+regular grant program, which is more expansive in scope. It is also distinct
+from OpenSats' website listings, which allows reviewed open-source projects to
+receive tax-deductible donations via OpenSats. The LTS program is specifically
+designed to provide long-term support for developers who are working on critical
+open-source infrastructure in and around bitcoin.
 
-Duis nunc est, ullamcorper a volutpat a, congue non ante. Cras sagittis elit
-risus, a venenatis mauris rutrum eu. Aliquam sagittis porttitor eleifend. Morbi
-aliquam diam nunc, quis venenatis orci viverra vitae. Morbi pulvinar
-pellentesque sem, id condimentum massa pulvinar vitae. Aenean vel turpis enim.
-Maecenas eleifend, ipsum vitae consectetur sagittis, risus est tempor nulla,
-commodo viverra ante nisi ac orci. Vivamus congue felis sed lacus aliquet
-rhoncus. Donec mollis enim in elit ultricies, viverra consectetur eros
-hendrerit. Nullam elementum rhoncus interdum.
+Having a longer time horizon than regular grants, the LTS program is geared
+towards long-term stability for grantees, with a minimum grant duration of 12
+months and possible grant durations of two years or longer. This will allow
+developers to focus on their work without having to worry about financial
+constraints.
 
-Donec sit amet risus quis nunc dictum tincidunt et quis ante. Nam viverra varius
-tellus, ut dignissim leo facilisis eu. Nam mattis augue eget enim molestie,
-gravida semper turpis vestibulum. Vestibulum ante ipsum primis in faucibus orci
-luctus et ultrices posuere cubilia curae; Pellentesque pellentesque vulputate
-eros vel hendrerit. Vestibulum pellentesque mollis sapien, condimentum placerat
-purus convallis vel. Etiam non lorem in odio faucibus blandit. Morbi lacinia
-scelerisque ipsum, vestibulum facilisis nulla malesuada non. Morbi euismod
-tortor a turpis elementum consequat.
+To be eligible for the LTS program, applicants must:
 
-Quisque ultrices pretium consequat. Vivamus tristique in urna vitae vehicula.
-Nullam dictum turpis est, vel dictum leo accumsan nec. Sed pharetra imperdiet
-odio, eu porta neque dictum elementum. Aenean facilisis scelerisque tortor, sed
-mollis libero. Duis quam ligula, bibendum maximus elementum sed, convallis in
-velit. Morbi neque nisl, lacinia quis ex sit amet, tempor varius turpis. Duis
-egestas, leo in auctor molestie, tortor nunc ultricies erat, ac hendrerit elit
-leo pretium magna. Curabitur eu nulla faucibus, lobortis risus et, tristique
-arcu.
+- have a track record of quality contributions
+- be mission-driven and self-motivated
+- be able to [work in public](https://bitcoin-resources.com/books/working-in-public)
+- be bitcoin-only
+
+Applications for the LTS program are now open: [https://opensats.org/apply/][apply]
+
+The first recipient of an OpenSats LTS Grant is Marco Falke, a long-term
+maintainer and contributor of Bitcoin Core with [thousands of contributions][pulls] over
+many years. Marco will continue to focus on testing and quality assurance, as
+well as maintenance and review, helping to make sure that the Bitcoin Core
+software is as solid as it can be. You can read more about his contributions
+[here][bm].
+
+We appreciate all the hard work that goes into building and maintaining critical
+open-source infrastructure. It is a hard and often thankless job. We hope that
+we can play a role in [closing the gaps in bitcoin open-source funding][gaps], and we
+look forward to working with contributors in the future.
+
+OpenSats aims to be an additional pillar of the increasingly solid funding
+landscape in and around bitcoin. We have learned a lot from the programs of the
+past and aim to join Brink, Spiral, Chaincode, HRF, and other successful grant
+programs to support those who build the tools that ensure the protection of
+individual liberties in our digital world.
+
+We are committed to supporting the development of bitcoin. The LTS program is a
+new way for OpenSats to support long-term contributors who are building,
+maintaining, testing, researching, and reviewing critical software.
+
+We encourage all qualified developers to [apply for the LTS program][apply].
+Together, we can build a stronger and more resilient bitcoin network.
+
+[apply]: /apply
+[pulls]: https://github.com/bitcoin/bitcoin/pulls?q=is%3Apr+sort%3Aupdated-desc+author%3AMarcoFalke
+[bm]: https://bitcoinmagazine.com/culture/marco-falke-bitcoin-network
+[gaps]: https://adamjonas.com/bitcoin/funding/grants/gaps-in-bitcoin-dev-funding/
+
+[^fn-lbip]: "An LBIP is a person who maintains the software for a critical Internet service or library, and has to do it without organizational support or a budget backing him up." —[Eric S. Raymond](http://esr.ibiblio.org/?p=8383)
